1998-09-04  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c (extract_files_child): don't write
	the samba password to the debug file.

1998-09-04  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.c (update_info_dumper): set inf.command to
	NO_COMMAND if reserve< 100 because if you force a level 0 with
	'amadmin force', it will do level 0 every days until you flush them
	to tape.

1998-09-03  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* NEWS: another typo (too late :-(

1998-09-03  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c: amanda will not use an holding disk
	if the directory with the datestamp already exist.

1998-09-03  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* Amanda 2.4.1 released
	
1998-08-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* NEWS: typo

1998-08-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/INSTALL: update some version numbers; SAMBA 1.9.18p10 has
	fixed the bug in p8; using p8 is not recommended any more
	* docs/SAMBA: ditto

	* config/config.guess: updated to libtool 1.2b's, in order to
	auto-detect some recent architectures
	* config/config.sub: ditto

	* server-src/amcleanup.sh.in (sbindir): amreport now lives in
 	sbindir; added it to PATH and removed full pathnames to binaries

1998-08-27  Blair Zajac  <blair@gps.caltech.edu>

	* configure.in: Add the directory /usr/lib/fs/vxfs to the search
	path where configure looks for vxdump and vxrestore.  This is for
	Solaris so it can automatically handle vxfs filesystems.
	* client-src/sendbackup-dump.c: add missing last NULL argument to
	newvstralloc().
	* server-src/dumper.c: add missing last NULL argument to
	newvstralloc().
	* NEWS: reorder 2.4.1 items into most to least important for most
	users.
	* config/acconfig.h: update comment for VXDUMP and VXRESTORE to
	include systems where the Veritas filesystem is used.

1998-08-21  Alexandre Oliva  <oliva@dcc.unicamp.br>
